--- a/css/styles.css
+++ b/css/styles.css
@@ -12,17 +12,41 @@
   --color-black: #000000;
 }
 
+/* Скидання стилів */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
   color: var(--body-text-color);
   background-color: var(--background-color);
-}
-
-/* Скидання стилей для списків */
-ul {
-  list-style: none;
 }
 
 /* Стилізація header i footer */
@@ -32,8 +56,9 @@ ul {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  text-decoration: none;
   color: var(--accent-color);
+
+  outline: 1px solid red;
 }
 
 .span-black {
@@ -41,12 +66,20 @@ ul {
 }
 
 /* Стилізація навігації */
+/* .header {
+  display: flex;
+  flex-direction: row;
+}
+
+.header-nav-list {
+  display: inline-flex;
+} */
+
 .header-nav-link,
 .header-contact-link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  text-decoration: none;
 }
 
 .header-nav-link {
@@ -67,13 +100,23 @@ ul {
 .header-nav-link:focus,
 .footer-contact-link:hover,
 .footer-contact-link:focus,
-.footer-address:hover,
-.footer-address:focus {
+.footer-address-link:hover,
+.footer-address-link:focus {
   color: var(--accent-color);
 }
 
 .footer {
   background-color: var(--footer-color);
+}
+
+.footer > .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
 }
 
 .span-white {
@@ -82,15 +125,22 @@ ul {
 
 .footer-address {
   font-style: normal;
+}
+
+.footer-address-link {
+  display: block;
   line-height: 1.71;
-  text-decoration: none;
   color: var(--color-white);
 }
 
 .footer-contact-link {
+  display: block;
   line-height: 1.71;
-  text-decoration: none;
   color: var(--copyright-link-color);
+}
+
+.footer-address li:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 /* Стилізація кнопок */
@@ -107,11 +157,15 @@ ul {
 }
 
 .btn-hero {
+  padding: 10px 32px;
+  border: none;
+  border-radius: 4px;
   font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--button-hover-text-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .works-btn:hover,
@@ -121,7 +175,16 @@ ul {
 }
 
 /* Стилізація Героя */
+.hero {
+  margin-bottom: 94px;
+}
+
+.hero .container {
+  text-align: center;
+}
+
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -134,7 +197,14 @@ ul {
 }
 
 /* Стилізація Преимущества */
+.advantages-list {
+  margin-bottom: 94px;
+
+  outline: 1px solid red;
+}
+
 .advantages-title {
+  margin-bottom: 10px;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -147,7 +217,12 @@ ul {
 }
 
 /* Стилізація Чем мы занимаемся*/
+.activity-list {
+  margin-bottom: 94px;
+}
+
 .section-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -160,6 +235,15 @@ ul {
   background-color: var(--background-select-color);
 }
 
+.team > .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.team-member-img {
+  margin-bottom: 30px;
+}
+
 .team-member-title,
 .team-member-desc {
   font-size: 16px;
@@ -168,8 +252,13 @@ ul {
 }
 
 .team-member-title {
+  margin-bottom: 10px;
   font-weight: 500;
   color: var(--body-title-color);
+}
+
+.team-member-desc {
+  margin-bottom: 30px;
 }
 
 /* Стилізація сторінки Портфолио */
