--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,6 @@ body {
   display: inline-flex;
 }
 
-.header-nav-item {
-  height: 80px;
-  display: inline-flex;
-  align-items: center;
-}
-
 .header-nav-item:not(:last-child),
 .header-contact-item:not(:last-child) {
   margin-right: 50px;
@@ -106,9 +100,11 @@ body {
 
 .header-nav-link,
 .header-contact-link {
+  display: block;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  padding: 32px 0;
 }
 
 .header-nav-link {
@@ -121,12 +117,6 @@ body {
 
 .header-contact-list {
   display: inline-flex;
-}
-
-.header-contact-item {
-  height: 80px;
-  display: inline-flex;
-  align-items: center;
 }
 
 .header-contact-link {
@@ -145,12 +135,9 @@ body {
 }
 
 .footer {
-  background-color: var(--footer-color);
-}
-
-.footer > .container {
   padding-top: 60px;
   padding-bottom: 60px;
+  background-color: var(--footer-color);
 }
 
 .logo-footer {
@@ -246,17 +233,29 @@ body {
   padding-bottom: 94px;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .advantages-list {
   display: flex;
-  flex-wrap: wrap;
-  margin-bottom: -30px;
-  margin-left: -30px;
 }
 
 .advantages-item {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-bottom: 30px;
-  margin-left: 30px;
+  width: 270px;
+}
+
+.advantages-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .advantages-title {
@@ -273,8 +272,8 @@ body {
 }
 
 /* Стилізація Чем мы занимаемся*/
-.activity {
-  padding-bottom: 94px;
+.activity-container {
+  padding-top: 0;
 }
 
 .section-title {
@@ -288,15 +287,10 @@ body {
 
 .activity-list {
   display: flex;
-  flex-wrap: wrap;
-  margin-bottom: -30px;
-  margin-left: -30px;
 }
 
-.activity-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-bottom: 30px;
-  margin-left: 30px;
+.activity-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* Стилізація Наша команд*/
@@ -306,23 +300,22 @@ body {
 
 .team-list {
   display: flex;
-  flex-wrap: wrap;
-  margin-bottom: -30px;
-  margin-left: -30px;
 }
 
 .team-item {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-bottom: 30px;
-  margin-left: 30px;
+  width: 270px;
   border-radius: 0 0 4px 4px;
   background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.team-member-img {
-  margin-bottom: 30px;
+.team-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-div-desc {
+  padding: 30px;
 }
 
 .team-member-title,
@@ -338,21 +331,11 @@ body {
   color: var(--body-title-color);
 }
 
-.team-member-desc {
-  margin-bottom: 30px;
-}
-
 /* Стилізація сторінки Портфолио */
 .works-nav {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  margin-right: -8px;
-  margin-bottom: 42px;
-}
-
-.works-item-nav {
-  margin-bottom: 8px;
+  margin-bottom: 50px;
 }
 
 .works-item-nav:not(:last-child) {
